2001-06-12  Martin Buchholz  <martin@xemacs.org>

	* config.h.in (alloca): All feature test macros must be defined
	before the first system header file inclusion.  So move alloca
	twiddling after the feature test definitions, but before the first
	"real" code.

2001-06-11  Martin Buchholz  <martin@xemacs.org>

	* lisp.h (DECIMAL_PRINT_SIZE): Don't use floating point.
	Sun cc (buggily?) cannot use floating point computations to define
	a compile-time integral constant.

2001-06-10  Ben Wing  <ben@xemacs.org>


	------ signal-code changes ------
	
	* data.c (init_data_very_early):
	* device-tty.c (init_device_tty):
	* emacs.c (fatal_error_signal):
	* emacs.c (memory_warning_signal):
	* floatfns.c (init_floatfns_very_early):
	* linuxplay.c (linux_play_data_or_file):
	* nas.c (*):
	* process-unix.c (unix_init_process):
	* process-unix.c (unix_create_process):
	* process-unix.c (unix_send_process):
	* process-unix.c (unix_deactivate_process):
	* signal.c (handle_signal_if_fatal):
	* signal.c (init_signals_very_early):
	* signal.c (init_interrupts_late):
	* sunplay.c (play_sound_file):
	* sunplay.c (play_sound_data):
	* sysdep.c (save_signal_handlers):
	* sysdep.c (restore_signal_handlers):
	* sysdep.c (setup_pty):
	* syssignal.h (EMACS_SIGNAL):
	use EMACS_SIGNAL everywhere instead of playing preprocessing
	games with signal().

	* s\windowsnt.h:
	* s\mingw32.h:
	* syssignal.h:
	Remove mswindows signal code from s+m headers and move to
	syssignal.h as one of the five ways of signal handling, instead of
	playing preprocessing games.

	* fileio.c:
	* sysdep.c (qxe_reliable_signal):
	Rename sys_do_signal to qxe_reliable_signal.
	
	* signal.c (set_timeout_signal):
	* process-unix.c (close_safely):
	* profile.c (Fstart_profiling):
	* profile.c (Fstop_profiling):
	* signal.c (init_async_timeouts):
	* signal.c (start_async_timeouts):
	Create set_timeout_signal(); use instead of just EMACS_SIGNAL to
	establish a signal handler on a timeout signal; this does special