@@ -1,3 +1,12 @@
+2001-06-11  Martin Buchholz  <martin@xemacs.org>
+
+	* buffer.h (DFC_C_STRING_ALLOCA_USE_CONVERTED_DATA):
+	* buffer.h (DFC_C_STRING_MALLOC_USE_CONVERTED_DATA):
+	Revert to doing type-checking on `sink'.
+
+	* sound.h (sound_perror): Bufbyte -> CBufbyte
+	* sound.h (sound_warn): Bufbyte -> CBufbyte
+
 2001-06-12  Martin Buchholz  <martin@xemacs.org>
 
 	* config.h.in (alloca): All feature test macros must be defined
